@@ -4,6 +4,7 @@
 
 == 0.3.0 [unreleased]
 
+* Added +bismas2xml+ executable.
 * Renamed +bismas+ executable to +bismas-filter+.
 * Renamed Bismas::Categories to Bismas::Schema and extended scope.
 * Fixed Bismas.amend_encoding to use default encoding when encoding option is
